# websocket-chess

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp  server.cpp  socktest.py  test.sh
server/: GameServer.cpp  GameServer.hpp  HttpServer.cpp  HttpServer.hpp  Server.cpp  Server.hpp
server/utils/: AsyncFileReader.hpp  AsyncFileStreamer.hpp
tests/: CMakeLists.txt  async_filereader_test.cpp  async_filestreamer_test.cpp
tests/test_data/: test.html
www/: index.html
